--- a/page.html
+++ b/page.html
@@ -17,6 +17,7 @@
         <input type="date" id="date-input" style="display: none;">
         <input type="date" id="start-date-input" style="display: none;">
         <input type="date" id="end-date-input" style="display: none;">
+        <button id="search-button">Rechercher</button>
         <div id="data-container"></div>
         <script src="script.js"></script>
     </body>
