--- a/page.html
+++ b/page.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <h1>SAE : Projet BD (Mise en oeuvre et Exploitation d'une base de données)</h1>
-        <input type="text" id="search-bar" placeholder="Rechercher par ville...">
+        <input type="text" id="search-bar" placeholder="Rechercher par nom...">
         <select id="date-filter-type">
             <option value="none" selected>Ne pas rechercher par date</option>
             <option value="exact">Recherche par date exacte</option>
