ajout d'un default dans le menu déroulant

--- a/page.html
+++ b/page.html
@@ -15,6 +15,7 @@
         <button id="search-button">Rechercher</button>
         <button id="reset-button">Réinitialiser</button>
         <select id="sort-select">
+            <option value="" disabled selected>Choisir un critère de tri</option>
             <option value="nom-asc">Nom (A-Z)</option>
             <option value="nom-desc">Nom (Z-A)</option>
             <option value="codePostal-asc">Code Postal (Croissant)</option>
