ajout d'un filtre par formation et d'un scrool

--- a/page.html
+++ b/page.html
@@ -9,6 +9,7 @@
     <body>
         <h1>SAE : Projet BD (Mise en oeuvre et Exploitation d'une base de données)</h1>
         <input type="text" id="search-bar" placeholder="Rechercher par nom...">
+        <input type="text" id="formation-filter" placeholder="Rechercher par formation...">
         <input type="date" id="start-date-filter" placeholder="Date de début">
         <input type="date" id="end-date-filter" placeholder="Date de fin">
         <input type="text" id="postal-code-filter" placeholder="Rechercher par code postal...">
