ajustement de la page détails

--- a/details.html
+++ b/details.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Détails de la formation</h1>
     <div id="item-details"></div>
-    <button onclick="window.location.href = 'page.html';">Retour</button>
+    <button onclick="window.close();">Retour</button>
     <script src="scriptDetail.js"></script>
 </body>
 </html>
