--- a/details.html
+++ b/details.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Détails de la formation</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@700" rel="stylesheet">
 </head>
 <body>
     <h1>Détails de la formation</h1>
