--- a/page.html
+++ b/page.html
@@ -5,9 +5,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>SAE : Projet BD (Mise en oeuvre et Exploitation d'une base de données)</title>
         <link rel="stylesheet" href="style.css">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@700" rel="stylesheet">
     </head>
     <body>
-        <h1>SAE : Projet BD (Mise en oeuvre et Exploitation d'une base de données)</h1>
+        <h1 class="titre-cliquable">SAE : Projet BD (Mise en oeuvre et Exploitation d'une base de données)</h1>
         <input type="text" id="search-bar" placeholder="Rechercher par nom...">
         <input type="text" id="formation-filter" placeholder="Rechercher par formation...">
         <input type="date" id="start-date-filter" placeholder="Date de début">
